# bxl-bikes

./: .gitignore  Cargo.toml  README.md  model.pth  network.py
src/: device_data.rs  device_history.rs  devices.rs  main.rs  weather_data.rs
