[package]
name = "bxl_bikes"
version = "0.1.0"
authors = ["Wannes Malfait <wannes.malfait@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
chrono = "0.4.23"
csv = "1.2.0"
clap = { version = "4.1.6", features = ["derive"] }
serde_json = "1.0.93"
serde = {version="1.0.152", features = ["derive"]}
tokio = { version = "1.25.0", features = ["full"] }
